Adding another module and exporting some packages used with SSL.