@@ -1,4 +1,6 @@
---add-modules=java.activation,java.sql.rowset,java.xml.ws
+--add-modules=java.activation,java.sql.rowset,java.xml.ws,java.xml.bind
+--add-exports=java.base/com.sun.crypto.provider=ALL-UNNAMED
+--add-exports=java.base/sun.security.provider=ALL-UNNAMED
 --add-opens=java.base/java.lang=ALL-UNNAMED
 --add-opens=java.base/java.lang.reflect=ALL-UNNAMED
 --add-opens=java.base/java.math=ALL-UNNAMED
@@ -8,7 +10,6 @@
 --add-opens=java.base/java.text=ALL-UNNAMED
 --add-opens=java.base/java.util=ALL-UNNAMED
 --add-opens=java.base/sun.security.pkcs=ALL-UNNAMED
---add-opens=java.base/sun.security.provider=ALL-UNNAMED
 --add-opens=java.base/sun.security.rsa=ALL-UNNAMED
 --add-opens=java.base/sun.security.x509=ALL-UNNAMED
 --add-opens=java.desktop/java.awt=ALL-UNNAMED
